<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.test.ui.fragment.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/navigation_products"
        android:name="com.example.test.ui.fragment.ProductsFragment"
        android:label="@string/title_add_product"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/navigation_statistical"
        android:name="com.example.test.ui.fragment.StatisticalFragment"
        android:label="@string/title_statistical"
        tools:layout="@layout/fragment_statistical" />
<!--    <fragment-->
<!--        android:id="@+id/navigation_user"-->
<!--        android:name="com.example.clothes.ui.fragment.UserFragment"-->
<!--        android:label="@string/title_user"-->
<!--        tools:layout="@layout/fragment_user" />-->

</navigation>